[gd_scene load_steps=26 format=3 uid="uid://c8gtqegyrncm0"]

[ext_resource type="Script" path="res://player.gd" id="1_cyj8s"]
[ext_resource type="Script" path="res://grapple_raycast.gd" id="3_jmx57"]
[ext_resource type="Script" path="res://grapple.gd" id="4_jjudc"]
[ext_resource type="Texture2D" uid="uid://uwt3evyn44di" path="res://art/robot/idle/idle_0000.png" id="5_h87t6"]
[ext_resource type="Texture2D" uid="uid://cxhhe2xx1u2tm" path="res://art/robot/walk/walk_0000.png" id="5_nv2t0"]
[ext_resource type="Texture2D" uid="uid://dlml3x5c43yx2" path="res://art/robot/idle/idle_0001.png" id="6_0sdkn"]
[ext_resource type="Texture2D" uid="uid://mi3o5ep10w2c" path="res://art/robot/walk/walk_0001.png" id="6_tg3r2"]
[ext_resource type="Texture2D" uid="uid://bdymhpf15mmqp" path="res://art/robot/walk/walk_0002.png" id="7_gjc08"]
[ext_resource type="Texture2D" uid="uid://45bbdqwg5p81" path="res://art/robot/idle/idle_0002.png" id="7_i2ib2"]
[ext_resource type="Texture2D" uid="uid://b0mk6urnuwahx" path="res://art/robot/idle/idle_0003.png" id="8_0snvr"]
[ext_resource type="Texture2D" uid="uid://d1pw4r7q3gcy" path="res://art/robot/walk/walk_0003.png" id="8_uac50"]
[ext_resource type="Texture2D" uid="uid://m0d7krhlwrtq" path="res://art/robot/walk/walk_0004.png" id="9_radp7"]
[ext_resource type="Texture2D" uid="uid://cov3fvfn8icis" path="res://art/robot/walk/walk_0005.png" id="10_men85"]
[ext_resource type="Texture2D" uid="uid://0fue4xammjpp" path="res://art/robot/walk/walk_0006.png" id="11_tqv5q"]
[ext_resource type="Texture2D" uid="uid://cpbtilwwboc13" path="res://art/robot/walk/walk_0007.png" id="12_o3dti"]
[ext_resource type="Script" path="res://Visual.gd" id="17_aeumv"]
[ext_resource type="Texture2D" uid="uid://djucf2lk2vaik" path="res://art/misc/particles/death/death_0000.png" id="17_k33xj"]
[ext_resource type="Texture2D" uid="uid://cnp0sa3xlbje5" path="res://art/misc/particles/death/death_0001.png" id="18_q83f2"]
[ext_resource type="Texture2D" uid="uid://dnxvktmqc4tit" path="res://art/misc/particles/death/death_0002.png" id="19_5rbqu"]
[ext_resource type="Texture2D" uid="uid://csmqwyxqac6gt" path="res://art/misc/particles/death/death_0003.png" id="20_eu6aj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5bf04"]
size = Vector2(12.1212, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_xbrf4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_h87t6")
}, {
"duration": 1.0,
"texture": ExtResource("6_0sdkn")
}, {
"duration": 1.0,
"texture": ExtResource("7_i2ib2")
}, {
"duration": 1.0,
"texture": ExtResource("8_0snvr")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_nv2t0")
}, {
"duration": 1.0,
"texture": ExtResource("6_tg3r2")
}, {
"duration": 1.0,
"texture": ExtResource("7_gjc08")
}, {
"duration": 1.0,
"texture": ExtResource("8_uac50")
}, {
"duration": 1.0,
"texture": ExtResource("9_radp7")
}, {
"duration": 1.0,
"texture": ExtResource("10_men85")
}, {
"duration": 1.0,
"texture": ExtResource("11_tqv5q")
}, {
"duration": 1.0,
"texture": ExtResource("12_o3dti")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_60sm5"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="AnimatedTexture" id="AnimatedTexture_thqid"]
frames = 4
speed_scale = 10.0
frame_0/texture = ExtResource("17_k33xj")
frame_1/texture = ExtResource("18_q83f2")
frame_1/duration = 1.0
frame_2/texture = ExtResource("19_5rbqu")
frame_2/duration = 1.0
frame_3/texture = ExtResource("20_eu6aj")
frame_3/duration = 1.0

[sub_resource type="Gradient" id="Gradient_ou6tm"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.59596, 0.681818, 0.722222, 0.853535, 0.893939)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="Player" type="CharacterBody2D"]
slide_on_ceiling = false
floor_stop_on_slope = false
floor_block_on_wall = false
floor_snap_length = 0.0
script = ExtResource("1_cyj8s")
GROUND_SPEED = null
AIR_SPEED = null
JUMP_VELOCITY = null
GROUND_FRICTION = null
AIR_FRICTION = null
MOVE_WHEN_IN_AIR = null
COYOTE_TIME = null
GRAVITY_MULT = null
GRAPPLE_STRENGTH = null
VELOCITY_MULTIPLY = null
SIZE = null
MAX_VELOCITY = null

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_5bf04")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_5bf04")

[node name="GrappleRaycast" type="RayCast2D" parent="."]
collision_mask = 2
hit_from_inside = true
script = ExtResource("3_jmx57")
MAX_RAYCAST_DISTANCE = null

[node name="Grapple" type="Line2D" parent="."]
show_behind_parent = true
width = 1.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 4
antialiased = true
script = ExtResource("4_jjudc")
PIXEL_SIZE = 1
STRETCH = 0.001

[node name="Visual" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(8, 7.5)
sprite_frames = SubResource("SpriteFrames_xbrf4")
animation = &"walk"
frame = 5
frame_progress = 0.16948
script = ExtResource("17_aeumv")
metadata/_edit_lock_ = true

[node name="GrappleAnimationTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DeathParticles" type="CPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_60sm5")
position = Vector2(8, 8)
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
lifetime_randomness = 1.0
fixed_fps = 10
fract_delta = false
local_coords = true
texture = SubResource("AnimatedTexture_thqid")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
radial_accel_min = -100.0
radial_accel_max = 100.0
damping_min = 100.0
damping_max = 100.0
color_ramp = SubResource("Gradient_ou6tm")
anim_speed_max = 1.0
anim_offset_max = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_danger_body_entered"]
[connection signal="timeout" from="GrappleAnimationTimer" to="." method="_on_grapple_animation_timer_timeout"]
